cleaned up html, added pretty wrap to css

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Admin</title>
+    <title>Oasis: Plant Based Social Media</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrapper">
         <aside class="sidebar">
             <div class="logo">
-                <svg width="100px" height="100px" viewBox="0 0 1024.00 1024.00" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#000000" transform="rotate(90)" stroke="#000000" stroke-width="0.01024"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="12.288"></g><g id="SVGRepo_iconCarrier"><path d="M450.72 418.17c-42.29-21.86-144.5-220-171.65-198.22s-40.59 114.28 0.29 171.31 132 97 153.52 129.58 18.45 57.07 13.36 63.2S262.49 462 217.66 485.53s-28.41 84.69 17.56 132.54S427 651.39 455.57 672.76s32.72 55 20.49 55-145.88-32.38-192.77-24.15-68.25 39.89 0.12 73.42 180.26 8.87 199.28 28.21 6.8 28.54-7.47 29.58-110.14-4.91-143.78 0.24 6.21 56.07 23.57 69.3 80.59 19.24 98.94 16.15 36.67-26.58 51-20.48 3.14 45.88 8.25 53 46.92 9.1 53-0.09-10.26-37.71-0.09-51 32.65 11.16 66.28-1.13 109-70.55 111-104.2-132.52 27.76-167.19 26.8c-24.48-4-34.71-21.36-19.43-30.56s228.33-55.45 244.57-96.27 4-34.68-21.47-34.63S605.6 724.45 590.26 700 791 610 813.3 555.9s29.37-119.36-0.22-127.47-147.62 137.92-194.54 130.86-1.06-21.41 19.29-48 132.36-120.51 133.32-154.16 10.08-67.32-27.65-71.33-129.27 135.84-149.69 123.63 52.89-78.61 64-143.89S632.09 133 611.7 137.14s-19.37 4.11-19.34 22.47 10.33 79.52-1.85 114.21-13.14 60.18-23.35 54.08-10.27-43.83-4.2-73.41 23.3-92.83 13.07-112.19S545.27 48.53 467.8 68s-72.25 89.86-65 136.75 27.67 83.57 45.09 128.41 21.71 94.77 2.83 85.01z" fill="#ffffff"></path></g></svg>
+                <svg width="100px" height="100px" viewBox="0 0 1024.00 1024.00" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#F8F5EC" stroke="#F8F5EC" stroke-width="0.01024"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#F8F5EC" stroke-width="12.288"></g><g id="SVGRepo_iconCarrier"><path d="M450.72 418.17c-42.29-21.86-144.5-220-171.65-198.22s-40.59 114.28 0.29 171.31 132 97 153.52 129.58 18.45 57.07 13.36 63.2S262.49 462 217.66 485.53s-28.41 84.69 17.56 132.54S427 651.39 455.57 672.76s32.72 55 20.49 55-145.88-32.38-192.77-24.15-68.25 39.89 0.12 73.42 180.26 8.87 199.28 28.21 6.8 28.54-7.47 29.58-110.14-4.91-143.78 0.24 6.21 56.07 23.57 69.3 80.59 19.24 98.94 16.15 36.67-26.58 51-20.48 3.14 45.88 8.25 53 46.92 9.1 53-0.09-10.26-37.71-0.09-51 32.65 11.16 66.28-1.13 109-70.55 111-104.2-132.52 27.76-167.19 26.8c-24.48-4-34.71-21.36-19.43-30.56s228.33-55.45 244.57-96.27 4-34.68-21.47-34.63S605.6 724.45 590.26 700 791 610 813.3 555.9s29.37-119.36-0.22-127.47-147.62 137.92-194.54 130.86-1.06-21.41 19.29-48 132.36-120.51 133.32-154.16 10.08-67.32-27.65-71.33-129.27 135.84-149.69 123.63 52.89-78.61 64-143.89S632.09 133 611.7 137.14s-19.37 4.11-19.34 22.47 10.33 79.52-1.85 114.21-13.14 60.18-23.35 54.08-10.27-43.83-4.2-73.41 23.3-92.83 13.07-112.19S545.27 48.53 467.8 68s-72.25 89.86-65 136.75 27.67 83.57 45.09 128.41 21.71 94.77 2.83 85.01z" fill="#F8F5EC"></path></g></svg>
                 <h1>oasis.</h1>
             </div>
             <ul>
@@ -34,14 +34,13 @@
                 </button>
                 <input type="text">
             </div>
-            <div class="notifications">
+        
+            <div class="user-info">
                 <button>
                     <img src="/images/notification-bell-1396-svgrepo-com.png">
                 </button>
-            </div>
-            <div class="user-info">
                 <p>Monstera's Oasis</p>
-                <img src="https://images.pexels.com/photos/3139367/pexels-photo-3139367.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                <img class="pfp" src="https://images.pexels.com/photos/3139367/pexels-photo-3139367.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
             </div>
             <div class="welcome">
                 <p>Welcome back,</p>
@@ -60,45 +59,49 @@
             </div>
         </header>
         <main>
-            <h2>Your posts</h2>
             <div class="cards">
+                <h2>Your posts</h2>
                 <article class="card">
-                    <h2></h2>
-                    <p></p>
-                    <img src="">
+                    <h3>Brown Tips on chinese evergreen</h3>
+                    <p>The last few weeks, the leaves of my plant have gone from green to yellow-brown, specially in the tips. Why does this happen?</p>
+                    <img src="https://www.bhg.com/thmb/RNezz0NnkckYtMiBhh4xKtI5iVg=/1500x0/filters:no_upscale():strip_icc()/chinese-evergreen-2DowVnqnqyZ9FB4bN0vXof-7d8b494efb0d4fe6b0740c40196ea13b.jpg" alt="chinese evergreen with yellowing leaves">
                 </article>
                 <article class="card">
-                    <h2></h2>
-                    <p></p>
-                    <img>
+                    <h3>White powder on leaves?</h3>
+                    <p>One of my plants, started getting this white powdery stuff on top of the leaves. How can I fix this?</p>
+                    <img src="https://www.gardendesign.com/pictures/images/400x320Exact_0x0/site_3/powdery-mildew-powdery-mildew-on-squash-leaf-shutterstock-com_13365.jpg" alt="white powder on my squash plants">
                 </article>
                 <article class="card">
-                    <h2></h2>
-                    <p></p>
-                    <img>
+                    <h3>Just got a new Basil Plant</h3>
+                    <p>What should I do to make it thicker? I usually just cut some of the branches so it goes wider and cut the flowers.</p>
+                    <img src="https://bs.plantnet.org/image/o/b03db90006e46afa7b3f7a61d77e1336a61c4b2d" alt="a young basil plant">
                 </article>
                 <article class="card">
-                    <h2></h2>
-                    <p></p>
-                    <img>
+                    <h3>Plant ID - Found in central Europe</h3>
+                    <p>I recently went on holiday to Germany and saw this curious little plant while walking around a forest. Anybody know what it is?</p>
+                    <img src="https://live.staticflickr.com/65535/47968382262_ba131b4781_b.jpg" alt="red plant in a forest floor with moss">
                 </article>
                 <article class="card">
-                    <h2></h2>
-                    <p></p>
-                    <img>
+                    <h3>My friend's vegetable garden</h3>
+                    <p>She is a complete pro, I always wonder how she keeps all her plants so healthy. I am totally not jealous haha.</p>
+                    <img src="https://cdn.stocksnap.io/img-thumbs/960w/vegetable-garden_LGNABNUOFF.jpg" alt="lush vegetable garden on raised beds">
                 </article>
                 <article class="card">
-                    <h2></h2>
-                    <p></p>
-                    <img>
+                    <h3>What are this ants doing?</h3>
+                    <p>I have seen them come and go around the patio, but never realized they are actually farming aphids on my plants. Good job!</p>
+                    <img src="https://live.staticflickr.com/5479/30571708826_42a86d1ce7_b.jpg" alt="ants farming aphids on a taro leaf">
                 </article>
             </div>
             <div class="announcement">
-
+                <h2>Announcements</h2>
+                <div>
+                    <h3>🌱 Plant Lovers Unite! 🌱</h3>
+                    <p>Hey green thumbs! 🌿 Exciting news—our community just got even better! Starting this week, we’re introducing #PlantDoctorFriday, a dedicated day where you can share photos and descriptions of your struggling plants to get tips from fellow plant enthusiasts and experts.</p>
+                    <p>Let’s grow stronger together—one leaf at a time. 🌼 Don’t forget to tag your posts with #PlantDoctorSundays!</p_>
+                    <p>✨ Happy planting, everyone! 🌻</p>
+                </div>
             </div>
-            <div class="trending">
 
-            </div>
         </main>
     </div>
 </body>
